project3/trd-prd-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb1
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:784849575779:certificate/afcb88f1-b58c-44b7-893e-d5210e04a4b8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: alb
  rules:
  - host:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginxindex-svc
              port:
                number: 80
        - path: /signup.jsp
          pathType: Prefix
          backend:
            service:
              name: nginxsign-svc
              port:
                number: 80
        - path: /login.jsp
          pathType: Prefix
          backend:
            service:
              name: nginxlogin-svc
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb2
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:784849575779:certificate/afcb88f1-b58c-44b7-893e-d5210e04a4b8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: alb
  rules:
  - host:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginxindex-svc
              port:
                number: 80
        - path: /signup.jsp
          pathType: Prefix
          backend:
            service:
              name: nginxsign-svc
              port:
                number: 80
        - path: /login.jsp
          pathType: Prefix
          backend:
            service:
              name: nginxlogin-svc
              port:
                number: 80
